--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -19,6 +19,8 @@
           <div
             class="block p-6 border-t-[10px] border-blue-700 bg-white rounded-lg shadow dark:bg-gray-800 dark:border-blue-700"
           >
+            <!-- message here -->
+            <div data-th-replace="~{message :: messagebox}"></div>
             <h5
               class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
             >
