--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -36,6 +36,7 @@
               method="post"
               data-th-object="${userForm}"
               class="mt-5"
+              novalidate
             >
               <!-- name field-->
               <div class="mb-3">
@@ -53,6 +54,13 @@
                   placeholder="John Doe"
                   required
                 />
+
+                <p
+                  data-th-if="${#fields.hasErrors('name')}"
+                  data-th-errors="*{name}"
+                  class="text-red-600 px-1 py-2"
+                >
+                </p>
               </div>
 
               <!-- email field -->
@@ -70,6 +78,12 @@
                   placeholder="name@flowbite.com"
                   required
                 />
+                <p
+                  data-th-if="${#fields.hasErrors('email')}"
+                  data-th-errors="*{email}"
+                  class="text-red-600 px-1 py-2"
+                >
+                </p>
               </div>
 
               <!-- password field -->
@@ -86,6 +100,12 @@
                   class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                   required
                 />
+                <p
+                  data-th-if="${#fields.hasErrors('password')}"
+                  data-th-errors="*{password}"
+                  class="text-red-600 px-1 py-2"
+                >
+                </p>
               </div>
 
               <!-- phone number field -->
@@ -103,6 +123,12 @@
                   placeholder="1234567890"
                   required
                 />
+                <p
+                  data-th-if="${#fields.hasErrors('phoneNumber')}"
+                  data-th-errors="*{phoneNumber}"
+                  class="text-red-600 px-1 py-2"
+                >
+                </p>
               </div>
 
               <!-- about textarea -->
@@ -119,7 +145,15 @@
                   class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                   placeholder="Write here..."
                 ></textarea>
+                <p
+                  data-th-if="${#fields.hasErrors('about')}"
+                  data-th-errors="*{about}"
+                  class="text-red-600 px-1 py-2"
+                >
+                </p>
               </div>
+
+
               <!-- buttons -->
               <div class="mb-3 flex justify-center space-x-3">
                 <button
