complete signup, login with form,  handling user data to login from database done

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -59,8 +59,7 @@
                   data-th-if="${#fields.hasErrors('name')}"
                   data-th-errors="*{name}"
                   class="text-red-600 px-1 py-2"
-                >
-                </p>
+                ></p>
               </div>
 
               <!-- email field -->
@@ -75,15 +74,14 @@
                   id="email"
                   data-th-field="*{email}"
                   class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                  placeholder="name@flowbite.com"
+                  placeholder="name@email.com"
                   required
                 />
                 <p
                   data-th-if="${#fields.hasErrors('email')}"
                   data-th-errors="*{email}"
                   class="text-red-600 px-1 py-2"
-                >
-                </p>
+                ></p>
               </div>
 
               <!-- password field -->
@@ -104,8 +102,7 @@
                   data-th-if="${#fields.hasErrors('password')}"
                   data-th-errors="*{password}"
                   class="text-red-600 px-1 py-2"
-                >
-                </p>
+                ></p>
               </div>
 
               <!-- phone number field -->
@@ -127,8 +124,7 @@
                   data-th-if="${#fields.hasErrors('phoneNumber')}"
                   data-th-errors="*{phoneNumber}"
                   class="text-red-600 px-1 py-2"
-                >
-                </p>
+                ></p>
               </div>
 
               <!-- about textarea -->
@@ -149,10 +145,8 @@
                   data-th-if="${#fields.hasErrors('about')}"
                   data-th-errors="*{about}"
                   class="text-red-600 px-1 py-2"
-                >
-                </p>
+                ></p>
               </div>
-
 
               <!-- buttons -->
               <div class="mb-3 flex justify-center space-x-3">
