--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -11,7 +11,7 @@
     <script>
       // Immediately apply the theme from localStorage before anything renders to avoid flash of unstyled content (FOUC) or flash of incorrect theme.
       (function () {
-        const savedTheme = localStorage.getItem('theme') || 'light';
+        const savedTheme = localStorage.getItem("theme") || "light";
         document.documentElement.classList.add(savedTheme);
       })();
     </script>
@@ -20,8 +20,8 @@
       href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" data-th-href="@{'/css/style.css'}" />
     <link rel="stylesheet" data-th-href="@{'/css/output.css'}" />
-
     <!-- font awesome cdn link-->
     <link
       rel="stylesheet"
