logged-in user info shown at page

--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -11,6 +11,8 @@
       <div class="sm:pl-64 pt-20" style="height: 1000px">
         <div class="flex justify-center flex-col items-center">
           <h1 class="text-5xl">Welcome to Profile page</h1>
+          <h1 data-th-text="${loggedInUser.name}"></h1>
+          <h1 data-th-text="${loggedInUser.email}"></h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Consequatur, ratione!
