--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -33,7 +33,15 @@
   </head>
   <body class="dark:bg-gray-900 bg-gray-100 dark:text-white">
     <!-- Header is in navbar.html -->
-    <div data-th-replace="~{navbar :: navbar}"></div>
+    <!--  user is logged in : navbar -->
+    <div th:if="${loggedInUser}">
+      <div data-th-replace="~{user/user_navbar::user-navbar}"></div>
+    </div>
+
+    <!-- user is not logged : navbar -->
+    <div th:unless="${loggedInUser}">
+      <div data-th-replace="~{navbar :: navbar}"></div>
+    </div>
 
     <!-- main content -->
     <div class="p-4">
