--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -21,6 +21,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" data-th-href="@{'/css/style.css'}" />
+    <link rel="stylesheet" data-th-href="@{'/css/dialog.css'}" />
     <link rel="stylesheet" data-th-href="@{'/css/output.css'}" />
     <!-- font awesome cdn link-->
     <link
@@ -52,6 +53,8 @@
     <!-- <footer class="p-4">Footer: This is the footer</footer> -->
 
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script data-th-src="@{'/js/script.js'}"></script>
+    <script data-th-src="@{'/js/contacts.js'}"></script>
   </body>
 </html>
