--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -10,11 +10,23 @@
     <link rel="stylesheet" data-th-href="@{'/css/output.css'}" />
   </head>
   <body>
-    <div id="content">
+    <div id="content" class="px-4 py-10 mt-5">
       <h1>Welcome to Contact Page</h1>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus, natus.
-      </p>
+      <p>If you'd like to reach out, here are my contact details:</p>
+      <ul>
+        <li><strong>Email:</strong> archit.bhatnagar31@gmail.com</li>
+        <li><strong>Phone:</strong> +91-7982091078</li>
+        <li>
+          <strong>LinkedIn:</strong>
+          <a href="https://www.linkedin.com/in/archit-bhatnagar-027699228/"
+            >LinkedIn-Archit</a
+          >
+        </li>
+        <li>
+          <strong>GitHub:</strong>
+          <a href="https://github.com/Archit728">GitHub-Archit</a>
+        </li>
+      </ul>
     </div>
     <script>
       console.log("Contact page");
