--- a/src/main/resources/templates/user/search.html
+++ b/src/main/resources/templates/user/search.html
@@ -171,6 +171,7 @@
 
                       <!-- delete contact -->
                       <button
+                        th:onclick="deleteContact([[${c.id}]])"
                         class="text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
                       >
                         <i
@@ -179,6 +180,7 @@
                       </button>
                       <!-- update contact -->
                       <a
+                        data-th-href="@{'/user/contacts/view/'+*{id}}"
                         class="text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
                       >
                         <i
@@ -188,6 +190,7 @@
 
                       <!-- viewcontact -->
                       <button
+                        th:onclick="loadContactdata([[${c.id}]])"
                         class="text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
                       >
                         <i
@@ -248,8 +251,9 @@
           </div>
         </div>
       </div>
+      <div data-th-replace="~{ user/contact_modals :: contact}"></div>
     </div>
-
+    <script data-th-src="@{'/js/contacts.js'}"></script>
     <script>
       console.log("this is search page");
     </script>
