corrections regarding profile view

--- a/src/main/resources/templates/user/contacts.html
+++ b/src/main/resources/templates/user/contacts.html
@@ -78,6 +78,13 @@
                   </button>
                 </div>
               </form>
+              <button
+                type="button"
+                onclick="exportData()"
+                class="px-3 py-2 bg-green-700 text-white rounded hover:bg-green-800 dark:bg-blue-600 dark:hover:bg-blue-800"
+              >
+                Export
+              </button>
             </div>
             <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
               <div data-th-replace="~{message :: messagebox}"></div>
