--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -57,5 +57,16 @@
     <script data-th-src="@{'/js/script.js'}"></script>
     <script data-th-src="@{'/js/contacts.js'}"></script>
     <script data-th-src="@{'/js/admin.js'}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@linways/table-to-excel@1.0.4/dist/tableToExcel.min.js"></script>
+    <script>
+      function exportData() {
+        TableToExcel.convert(document.getElementById("contact-table"), {
+          name: "contacts.xlsx",
+          sheet: {
+            name: "Sheet 1",
+          },
+        });
+      }
+    </script>
   </body>
 </html>
