--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -21,8 +21,8 @@
           >
             <div class="flex flex-col items-center">
               <img
+                onerror="this.onerror=null; this.src='https://media.istockphoto.com/id/1300845620/vector/user-icon-flat-isolated-on-white-background-user-symbol-vector-illustration.jpg?s=612x612&w=0&k=20&c=yBeyba0hUkh14_jgv1OKqIH0CCSWU_4ckRkAoy2p73o='"
                 data-th-src="@{${loggedInUser.profilePic}}"
-                src="path/to/profilePic.jpg"
                 alt="Profile Photo"
                 class="w-44 h-44 rounded-full shadow-lg object-cover mb-4"
               />
