--- a/src/main/resources/templates/user/sidebar.html
+++ b/src/main/resources/templates/user/sidebar.html
@@ -12,10 +12,10 @@
       class="flex flex-col items-center ps-2.5 mb-8"
     >
       <img
-        onerror="this.onerror=null; this.src='https://media.istockphoto.com/id/1300845620/vector/user-icon-flat-isolated-on-white-background-user-symbol-vector-illustration.jpg?s=612x612&w=0&k=20&c=yBeyba0hUkh14_jgv1OKqIH0CCSWU_4ckRkAoy2p73o='"
+        onerror="this.onerror=null; this.src='https:/ /media.istockphoto.com/id/1300845620/vector/user-icon-flat-isolated-on-white-background-user-symbol-vector-illustration.jpg?s=612x612&w=0&k=20&c=yBeyba0hUkh14_jgv1OKqIH0CCSWU_4ckRkAoy2p73o='"
         data-th-src="@{${loggedInUser.profilePic}}"
-        class="h-16 me-3 sm:h-24 shadow-md rounded"
-        alt="SCM Logo"
+        class="h-16 me-3 sm:h-24 shadow-md rounded-full"
+        alt="Profile Pic"
       />
 
       <span class="text-gray-500" data-th-text="${loggedInUser.name}"
