--- a/src/main/resources/templates/user/sidebar.html
+++ b/src/main/resources/templates/user/sidebar.html
@@ -1,7 +1,7 @@
 <aside
   data-th-fragment="sidebar"
   id="logo-sidebar"
-  class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0"
+  class="fixed z-[60] top-0 left-0 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0"
   aria-label="Sidebar"
 >
   <div
@@ -12,7 +12,7 @@
       class="flex flex-col items-center ps-2.5 mb-8"
     >
       <img
-        onerror="this.onerror=null; this.src='https:/ /media.istockphoto.com/id/1300845620/vector/user-icon-flat-isolated-on-white-background-user-symbol-vector-illustration.jpg?s=612x612&w=0&k=20&c=yBeyba0hUkh14_jgv1OKqIH0CCSWU_4ckRkAoy2p73o='"
+        onerror="this.onerror=null; this.src='https://media.istockphoto.com/id/1300845620/vector/user-icon-flat-isolated-on-white-background-user-symbol-vector-illustration.jpg?s=612x612&w=0&k=20&c=yBeyba0hUkh14_jgv1OKqIH0CCSWU_4ckRkAoy2p73o='"
         data-th-src="@{${loggedInUser.profilePic}}"
         class="h-16 me-3 sm:h-24 shadow-md rounded-full"
         alt="Profile Pic"
